--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
         <button id="largeButton" class="large-button">Play Now</button>
     </div>
     <div class="bottom-buttons-container">
-        <button id="originalButton1" data-url="https://science-is-c00l.netlify.app/">Backup 1</button>
-        <button id="originalButton2" data-url="https://scienceisc00l.vercel.app/">Backup 2</button>
-        <button id="clonedButton" data-url="https://drive.google.com/uc?export=download&amp;id=1RDC9biQ2p8GORPtCZM6HsDuZssA5FeH0">Download 1.5.2</button>
+        <button id="originalButton1" data-url="https://mathisedcational5.vercel.app/">Backup 1</button>
+        <button id="originalButton2" data-url="https://mathlearning-isfun.netlify.app/">Backup 2</button>
+        <button id="clonedButton" data-url="https://drive.google.com/uc?export=download&id=1pjkDa96KQyyFasDccfs57eFDm8iwuGI8">Download 1.5.2</button>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const largeButton = document.getElementById('largeButton');
             const bottomButtons = document.querySelectorAll('.bottom-buttons-container button');
-            const largeButtonURL = "https://eaglercraft-bj5.pages.dev/"; // Specify URL here
+            const largeButtonURL = "https://eaglercraft.me/"; // Specify URL here
 
             // Function to handle button clicks
             function handleClick(event) {
